# BetService

./: .gitignore  Makefile  README.md  docker-compose.yml
bet_maker/: .example.env  Dockerfile  main.py  pyproject.toml
bet_maker/src/adapter/: redis_bet_repository.py  redis_client.py
bet_maker/src/api/: deps.py
bet_maker/src/api/routers/: bet_router.py
bet_maker/src/application/: bet.py
bet_maker/src/core/: config.py
bet_maker/src/domain/: bet_model.py  bet_repository.py
line_provider/: .example.env  Dockerfile  main.py  pyproject.toml
line_provider/src/adapter/: redis_client.py  redis_event_repository.py
line_provider/src/api/: deps.py
line_provider/src/api/routes/: event_router.py
line_provider/src/application/: event.py
line_provider/src/core/: config.py
line_provider/src/domain/: event_model.py  event_repository.py
line_provider/tests/application/: test_event.py
